--- a/css/man.css
+++ b/css/man.css
@@ -196,8 +196,8 @@ body {
 .header {
   width: 100%;
   height: 100vh;
-  background-image: -webkit-gradient(linear, right top, left top, from(rgba(27, 36, 47, 0.89)), to(rgba(27, 36, 47, 0.89))), url("../images/background.jpg");
-  background-image: linear-gradient(to left, rgba(27, 36, 47, 0.89), rgba(27, 36, 47, 0.89)), url("../images/background.jpg");
+  background-image: -webkit-gradient(linear, right top, left top, from(rgba(27, 36, 47, 0.89)), to(rgba(27, 36, 47, 0.89))), url("../images/background.png");
+  background-image: linear-gradient(to left, rgba(27, 36, 47, 0.89), rgba(27, 36, 47, 0.89)), url("../images/background.png");
   background-size: contain;
   background-position: center;
   display: -webkit-box;
@@ -753,15 +753,15 @@ body {
 }
 
 .about .my__skills .REACT__fill {
-  width: 50%;
+  width: 35%;
 }
 
 .about .my__skills .NODE__fill {
-  width: 40%;
+  width: 35%;
 }
 
 .about .my__skills .UI__fill {
-  width: 50%;
+  width: 45%;
 }
 
 /* PROJECT */
