--- a/sass/man.scss
+++ b/sass/man.scss
@@ -204,7 +204,7 @@ body {
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(to left, rgba(27, 36, 47, 0.89), rgba(27, 36, 47, 0.89)),
-        url("../images/background.png");
+        url("../images/background.jpg");
     background-size: contain;
     background-position: center;
 
