--- a/css/man.css
+++ b/css/man.css
@@ -196,8 +196,8 @@ body {
 .header {
   width: 100%;
   height: 100vh;
-  background-image: -webkit-gradient(linear, right top, left top, from(rgba(27, 36, 47, 0.89)), to(rgba(27, 36, 47, 0.89))), url("../images/background.jpg");
-  background-image: linear-gradient(to left, rgba(27, 36, 47, 0.89), rgba(27, 36, 47, 0.89)), url("../images/background.jpg");
+  background-image: -webkit-gradient(linear, right top, left top, from(rgba(27, 36, 47, 0.89)), to(rgba(27, 36, 47, 0.89)));
+  background-image: linear-gradient(to left, rgba(27, 36, 47, 0.89), rgba(27, 36, 47, 0.89));
   background-size: contain;
   background-position: center;
   display: -webkit-box;
@@ -213,6 +213,13 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.header > img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
 }
 
 .header__font-1, .header__font-2 {
