--- a/css/man.css
+++ b/css/man.css
@@ -196,10 +196,9 @@ body {
 .header {
   width: 100%;
   height: 100vh;
-  background-image: -webkit-gradient(linear, right top, left top, from(rgba(27, 36, 47, 0.89)), to(rgba(27, 36, 47, 0.89))), url("../images/background.jpg");
-  background-image: linear-gradient(to left, rgba(27, 36, 47, 0.89), rgba(27, 36, 47, 0.89)), url("../images/background.jpg");
-  background-size: contain;
-  background-position: center;
+  background-color: #080f16;
+  /* background-size: contain;
+    background-position: center; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
