--- a/sass/man.scss
+++ b/sass/man.scss
@@ -202,10 +202,10 @@ body {
 .header {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(to left, rgba(27, 36, 47, 0.89), rgba(27, 36, 47, 0.89)),
-        url("../images/background.jpg");
-    background-size: contain;
-    background-position: center;
+    background-color: #080f16/* linear-gradient(to left, rgba(27, 36, 47, 0.89), rgba(27, 36, 47, 0.89)),
+        url("../images/background.jpg") */;
+    /* background-size: contain;
+    background-position: center; */
 
     display: flex;
     flex-direction: column;
