--- a/sass/man.scss
+++ b/sass/man.scss
@@ -83,8 +83,8 @@ h1 {
 /* BODY */
 body {
     box-sizing: border-box;
-    font-family: "Raleway";
-    font-size: 1.3rem;
+    font-family: sans-serif /* "Raleway" */;
+    font-size: 1.2rem;
 }
 
 /* HAMBURGER MENU */
