--- a/sass/man.css
+++ b/sass/man.css
@@ -65,8 +65,8 @@ h1 {
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: "Raleway";
-  font-size: 1.3rem;
+  font-family: sans-serif;
+  font-size: 1.2rem;
 }
 
 /* HAMBURGER MENU */
